--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 			href="./src/assets/favicon-48x48.png"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Are you struggling to learn and remember guitar scales? Learn the most commmonly used scales including Major, Minor, Pentatonic, and Blues!"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
